<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tweedled</string>
    <string name="register">Register New Account</string>
    <string name="login">Login</string>
    <string name="user_name">Username</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_password_confirmation">Confirm Password</string>
    <string name="auto_login">Auto Login?</string>
    <string name="url">http://10.0.0.8</string>
    <string name="logout">Logout</string>

</resources>