<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:padding="15dp"
                  android:layout_gravity="center">

        <EditText android:id="@+id/userEmail"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:ems="10"
                  android:hint="@string/user_email"
                  android:inputType="textEmailAddress">
            <requestFocus android:layout_width="wrap_content"/>
        </EditText>

        <EditText android:id="@+id/userPassword"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:ems="10"
                  android:hint="@string/user_password"
                  android:inputType="textPassword"/>

        <EditText android:id="@+id/userPasswordConfirmation"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:ems="10"
                  android:hint="@string/user_password_confirmation"
                  android:inputType="textPassword"/>

        <Button android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="registerNewAccount"
                android:text="@string/register"
                android:background="@color/bg_button"
                android:textColor="@color/text_button"/>
    </LinearLayout>
</ScrollView>