<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/poll_list_background">

    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="20dp">

            <TextView android:layout_width="match_parent"
                      android:layout_height="40dp"
                      android:gravity="center"
                      android:textSize="32sp"
                      android:layout_marginBottom="10dp"
                      android:fontFamily="sans-serif-thin"
                      android:textStyle="normal|bold"
                      android:text="SIGN IN"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="100dp"
                          android:orientation="vertical"
                          android:paddingLeft="20dp"
                          android:background="@drawable/loginbox">

                <EditText
                        android:id="@+id/et_userEmail"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/user_email"
                        android:fontFamily="sans-serif-thin"
                        android:textStyle="normal|normal"
                        android:inputType="textEmailAddress" >
                </EditText>

                <EditText
                        android:id="@+id/et_userPassword"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/user_password"
                        android:fontFamily="sans-serif-thin"
                        android:textStyle="normal|normal"
                        android:inputType="textPassword"/>

            </LinearLayout>

            <CheckBox
                    android:id="@+id/cb_autoLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_login"
                    android:padding="15dp"/>

            <Button
                    android:id="@+id/but_loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:onClick="login"
                    android:text="@string/login"
                    android:background="@color/button_blue"
                    android:textColor="@android:color/white"
                    android:layout_margin="5dp"/>

            <Button android:id="@+id/tv_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/user_password"
                    android:text="@string/register"
                    android:onClick="register"
                    android:textSize="18sp"
                    android:clickable="true"
                    android:background="@color/bg_button"
                    android:textColor="@android:color/white"
                    android:layout_margin="5dp"/>

        </LinearLayout>

    </FrameLayout>

</ScrollView>